--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Karthik Revanuru
-bio: A Computer Scientist with interest in ML & AI who is looking for opportunities. Currently student @IIITB  
+bio: A Computer Scientist who is looking for opportunities/collaborations in ML & AI. Currently student @IIITB.  
 
 # twitter summary info
 description: My Home Page and technology blog
@@ -35,14 +35,14 @@ disqus:
 
 # if you don't have any of social below, comment the line
 #facebook: myfacebook
-twitter: https://twitter.com/karthikrevanuru
+twitter: karthikrevanuru
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: https://www.linkedin.com/in/revanurukarthik/
+linkedin: revanurukarthik
 # youtube: myyoutube
 # spotify: myspotify
-github: https://github.com/KarthikRevanuru
+github: KarthikRevanuru
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
