--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: false
 resume-url: assets/documents/Karthik_Revanuru.pdf
 
-url: https://karthikrevanuru.github.io/
+url: https://karthikrevanuru.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
