--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ description: Home Page
 external-image: false
 picture: assets/images/karthik.jpg
 
+research: true
+
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
@@ -55,7 +57,7 @@ email: karthik.revanuru@outlook.com
 authors:
     Karthik:
         name: Karthik Revanuru
-        bio: A Computer Scientist with interest in ML & AI who is looking for opportunities. Currently student @IIITB  
+        bio:  
         external-image: false
         picture: assets/images/karthik.jpg
         twitter: karthikrevanuru
