--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Karthik Revanuru
-bio: A Computer Scientist who is looking for opportunities/collaborations in ML & AI. Currently student @IIITB.  
+bio:   
 
 # twitter summary info
 description: Home Page
