--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Karthik Revanuru
-bio: Data Science @ CRED. Interested in research opportunities, experience in ML Research.
+bio: Data Science @ CRED.
 
 # twitter summary info
 description: Home Page
